fixed footer on iphone 5 view

--- a/css/screen.css
+++ b/css/screen.css
@@ -242,3 +242,28 @@ ul {
     font-weight: 500;
   }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+  body {
+    font-size: 1.2rem;
+  }
+  .portfolio {
+    top: 6%;
+  }
+
+  #h2_style {
+    font-size: 2.5rem;
+  }
+
+  h3 {
+    font-size: 1.3rem;
+  }
+
+  #section_3 {
+    height: 0%;
+  }
+
+  .my_footer p {
+    font-size: 2rem;
+  }
+}
